--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "2.1.8",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
   },
